Fake segmentation and betternav support

--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,10 @@
         "psr-4": {
             "SilverStripe\\TargetingPoc\\": "src/"
         }
+    },
+    "extra": {
+        "expose": [
+            "client/css"
+        ]
     }
 }
